docs: add affected-artifacts summary table to the Arrow write-path plan
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013jVS18MRgSdf7X9JcHSqsh